[iOS][visionOS] web.webex.com: Icons inside some buttons can be too small https://bugs.webkit.org/show_bug.cgi?id=286447 rdar://138155959
Reviewed by Aditya Keerthi.

The default inline button padding on iOS is too large and squashes the SVG within the button.
`RenderThemeIOS::adjustButtonStyle` already sets this larger padding for `appearance: auto`.

For `appearance: none`, we can just re-use the default desktop inline padding of 6px, to be compatible and interoperable with other browsers.

* LayoutTests/interaction-region/button-in-link-expected.txt:
* LayoutTests/platform/ios/css2.1/20110323/replaced-elements-001-expected.txt:
* LayoutTests/platform/ios/fast/forms/001-expected.txt:
* LayoutTests/platform/ios/fast/forms/button-default-title-expected.txt:
* LayoutTests/platform/ios/fast/forms/button-style-color-expected.txt:
* LayoutTests/platform/ios/fast/forms/input-first-letter-expected.txt:
* LayoutTests/platform/ios/fast/forms/select-baseline-expected.txt:
* Source/WebCore/css/html.css:
(input:is([type="button"], [type="submit"], [type="reset"]), input[type="file"]::file-selector-button, button):

Canonical link: https://commits.webkit.org/289343@main

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -881,15 +881,14 @@ input:is([type="button"], [type="submit"], [type="reset"]), input[type="file"]::
     align-items: flex-start;
     text-align: center;
     cursor: default;
+    padding-inline: 6px;
 #if !(defined(WTF_PLATFORM_IOS_FAMILY) && WTF_PLATFORM_IOS_FAMILY)
     color: ButtonText;
     padding-block: 2px 3px;
-    padding-inline: 6px;
     border: 2px outset ButtonFace;
     background-color: ButtonFace;
 #else
-    padding-block: 0;
-    padding-inline: 1em;
+    padding-block: 0; /* override input padding */
     border: 1px solid -webkit-control-background;
     font: 11px system-ui;
     color: -apple-system-blue;
